# SumArray

./: CMakeLists.txt  main.cpp
